sample textured triangle